Add endorsing of the jaxws 2.2/jaxb 2.2 stuff to the scripts and ant build thing.
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1035377 13f79535-47bb-0310-9956-ffa450edef68